=encoding UTF-8

=head1 NAME

Changes - Revision history for Module-CPANTS-Analyse

=head2 0.90_01 2013-08-01

=over

=item Applied all the changes in 0.88 again, and removed a few non-portable metrics for Test::Kwalitee.

=back

=head2 0.89 2013-08-01

=over

=item Tentatively reverted all the changes in 0.88

=back

=head2 0.88 2013-08-01

=over

=item add metric C<no_dot_underscore_files>
(L<daxim|https://metacpan.org/author/daxim>,
L<charsbar|https://metacpan.org/author/ishigaki>)

=item remove metrics C<distributed_by_debian>,
C<latest_version_distributed_by_debian>, C<has_no_bugs_reported_in_debian>,
C<has_no_patches_in_debian>, C<no_cpants_errors>, C<uses_test_nowarnings>,
C<has_test_pod>, C<has_test_pod_coverage>, C<has_examples>
(L<charsbar|https://metacpan.org/author/ishigaki>)

=item add metric C<portable_filenames>
(L<charsbar|https://metacpan.org/author/ishigaki>)

=item numerous fixes for a smoother operation of www-cpants
(L<charsbar|https://metacpan.org/author/ishigaki>)

=back

=head2 0.87 2013-02-12

=over

=item fix L<rt#80225|https://rt.cpan.org/Ticket/Display.html?id=80225> - Test
failures due to Test::CPAN::Meta::YAML::Version interface change
(L<wyant|https://metacpan.org/author/wyant>)

=item fix L<rt#82939|https://rt.cpan.org/Ticket/Display.html?id=82939> -
Hash-Randomization causes 10_analyse.t to fail
(L<kentnl|https://metacpan.org/author/kentnl>,
L<chorny|https://metacpan.org/author/chorny>)

=item fix L<rt#44796|https://rt.cpan.org/Ticket/Display.html?id=44796> -
Module::CPANTS::Kwalitee::Manifest broken for MANIFESTs containing files with
spaces (L<rivy|https://metacpan.org/author/rivy>)

=back

=head2 0.86 2012-04-11

=over

=item add several strict and warnings equivalents & make it easy to add more

=item fix when L<Moose> is used and strict is not used

=item add info about C<MIN_PERL_VERSION>

=item better remedy for
L<metayml_declares_perl_version|Module::CPANTS::Kwalitee::MetaYML>
