@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More;
+use Test::More tests => 2;
 
 for my $seed (qw(0xd8792d91 0x5be01872)) {
     local $ENV{PERL_HASH_SEED} = $seed;
@@ -12,4 +12,3 @@ for my $seed (qw(0xd8792d91 0x5be01872)) {
     my $content = qx/$cmd/;
     is($content, "4,0\n", "Slave forked script passed 3/3 checks with seed $seed");
 }
-done_testing;
